Some structure but very choppy and while flexible looks ugly at certain dimensions. Requires more tinkering and addition of other sections

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Sign-Up Form</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src="../js/script.js" defer></script>
 </head>
 <body>
     <img class="image" src="../images/plant.avif">
@@ -13,37 +13,39 @@
       <section class="top">
         <p> something something something </p>
       </section>
-      <form action="nothing.com" method="post">
-        <table>
-          <tr>
-            <td>
-              <label>First Name</label>
-              <input type="text" name="user_first_name">
-            </td>
-            <td>
-              <label>Last Name</label>
-              <input type="text" name="user_last_name">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <label>Email</label>
-              <input type="email" name="user_email">
-            </td>
-            <td>
-              <label>Phone Number</label>
-              <input type="tel" name="user_phone_number">
-          </tr>
-          <tr>
-            <td>
-              <label>Password</label>
-              <input type="password">
-            </td>
-            <td>
-              <label>Comfirm Password</label>
-              <input type="password">
-        </table>
-      </form>
+      <div class="form-wrapper">
+        <form action="nothing.com" method="post">
+            <table>
+              <tr>
+                <td>
+                  <label>First Name</label>
+                  <input type="text" name="user_first_name">
+                </td>
+                <td>
+                  <label>Last Name</label>
+                  <input type="text" name="user_last_name">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <label>Email</label>
+                  <input type="email" name="user_email">
+                </td>
+                <td>
+                  <label>Phone Number</label>
+                  <input type="tel" name="user_phone_number">
+              </tr>
+              <tr>
+                <td>
+                  <label>Password</label>
+                  <input type="password">
+                </td>
+                <td>
+                  <label>Comfirm Password</label>
+                  <input type="password">
+            </table>
+          </form>
+      </div>
       <section class="bottom">
       </section>
     </main>
