main part of the page has been better outlining. Img needs work and font type as well as placing of buttons and other items still needed

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
   
     <main class="main">
       <section class="top">
-        <p> something something something </p>
+        <p class="instruction"> something something something </p>
       </section>
       <div class="form-wrapper">
         <form action="nothing.com" method="post">
